Fix rich text button bar shrinking on Safari

--- a/web/src/components/RichTextButtonBar.scss
+++ b/web/src/components/RichTextButtonBar.scss
@@ -1,8 +1,6 @@
 @import "../styles/settings";
 
 .wrapper {
-  display: flex;
-
   @media print {
     display: none !important;
   }
@@ -15,7 +13,7 @@
   border-radius: $border-radius;
   box-shadow: 0px 0px 3px rgba(0,0,0,.1);
 
-  display: flex;
+  display: inline-flex;
   padding: .25em .5em;
   height: 2.1rem;
 }
